React Router y Redux

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "PlatziVideo",
+  "name": "platzi-video",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
-    "start": "webpack-dev-server --open --mode development"
+    "start": "webpack-dev-server --open --mode development",
+    "json-server": "npx json-server --watch initialState.json"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +22,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2"
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
